# auto-monitor-agent

./: .gitignore  .roomodes  CLAUDE.md  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.roo/rules-general/: project-overview.md
.roo/rules-mentor/: guidance-table.md
agent/: __init__.py  agent.py  api_server.py  config.py  hint_manager.py  metrics.py  monitor.py  notification.py  rag.py
sop/: error_handling_sop.md
tests/: test_agent.py  test_integration.py  test_integration_csharp.py  test_monitor.py  test_rag.py
